# py-assessment-app

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  ROADMAP.md  bad_solution.py  docker-compose.yml  pyproject.toml  repo_structure.txt  requirements.txt  solution.py  test_import.py
course/exercises/exercise1/: metatada.json
course/exercises/exercise2/: description.md  metadata.json  metatada.json
course/exercises/string_reversal/: metadata.json  starter_code.py  test.py
course/modules/module-01/: content.md  metadata.json
course/modules/module-02/: content.md  metadata.json
legacy/: auth.py  models.py
shared/: auth.py  config.py  course_loader.py  db.py  exercise_runner.py  firebase.py  markdown_converter.py  models.py
shared/database/: __init__.py
shared/database/firestore/: connection.py  user_store.py
shared/database/mongodb/: connection.py  user_store.py
shared/database/repositories/: user_repository.py
shared/models/: user.py
streamlit_app/: Dockerfile  README.md  app.py
streamlit_app/models/: forms.py
streamlit_app/pages/: about.py  account.py  exercises.py  home.py  login.py  modules.py  register.py
streamlit_app/utils/: firebase.py  manage_account.py
temp/: exercise.py  test_exercise.py
tools/: setup_firebase_data.py
